fix: www footer, spacing and bg-colour.

--- a/apps/www/src/app/globals.css
+++ b/apps/www/src/app/globals.css
@@ -4,4 +4,5 @@ body {
     width: 100%;
     margin: 0px;
     padding: 0px;
+    background-color: #161038;
 }
